@@ -1648,6 +1648,10 @@ UnicodeEncodeError_str(PyObject *self)
     PyObject *reason_str = NULL;
     PyObject *encoding_str = NULL;
 
+    if (!uself->object)
+        /* Not properly initialized. */
+        return PyUnicode_FromString("");
+
     /* Get reason and encoding as strings, which they might not be if
        they've been modified after we were contructed. */
     reason_str = PyObject_Str(uself->reason);
@@ -1732,6 +1736,10 @@ UnicodeDecodeError_str(PyObject *self)
     PyObject *result = NULL;
     PyObject *reason_str = NULL;
     PyObject *encoding_str = NULL;
+
+    if (!uself->object)
+        /* Not properly initialized. */
+        return PyUnicode_FromString("");
 
     /* Get reason and encoding as strings, which they might not be if
        they've been modified after we were contructed. */
@@ -1829,6 +1837,10 @@ UnicodeTranslateError_str(PyObject *self)
     PyUnicodeErrorObject *uself = (PyUnicodeErrorObject *)self;
     PyObject *result = NULL;
     PyObject *reason_str = NULL;
+
+    if (!uself->object)
+        /* Not properly initialized. */
+        return PyUnicode_FromString("");
 
     /* Get reason as a string, which it might not be if it's been
        modified after we were contructed. */
